--- a/src/Arte/PCMS/AdminBundle/Resources/views/SystemUser/list.html.twig
+++ b/src/Arte/PCMS/AdminBundle/Resources/views/SystemUser/list.html.twig
@@ -15,14 +15,17 @@
 
         <table>
             <thead>
-            {{ pdp_pager_column_render(pager) }}
+            <tr>
+                {{ pdp_pager_column_render(pager) }}
+                <th>操作</th>
+            </tr>
             </thead>
             <tbody>
             {% for entity in entities %}
                 <tr>
                     <td>{{ entity.ID }}</td>
                     <td>{{ entity.Active }}</td>
-                    <td>{{ entity.LoginId }}</td>
+                    <td><a href="{{ path('read', {id: entity.ID, ret: returnUrlParam}) }}">{{ entity.LoginId }}</a></td>
                     <td>{{ entity.DisplayName }}</td>
                     {#<td>{{ entity.DisplayNameKana }}</td>#}
                     {#<td>{{ entity.NickName }}</td>#}
@@ -30,6 +33,11 @@
                     <td>{{ entity.tbdepartment is null ? "" : entity.tbdepartment.Name }}</td>
                     <td>{{ entity.LastLoginDatetime is empty ? "" : entity.LastLoginDatetime|date('Y年m月d日') }}</td>
                     {#<td>{{ entity.CreatedDatetime is empty ? "" : entity.CreatedDatetime|date('Y年m月d日') }}</td>#}
+                    <td>
+                        <a href="{{ path('read', {id: entity.ID, ret: returnUrlParam}) }}">詳細</a>
+                        <a href="{{ path('update', {id: entity.ID, ret: returnUrlParam}) }}">編集</a>
+                        <a href="{{ path('delete', {id: entity.ID, ret: returnUrlParam}) }}">削除</a>
+                    </td>
                 </tr>
             {% endfor %}
             </tbody>
