--- a/src/Arte/PCMS/AdminBundle/Resources/views/TBSystemUser/show.html.twig
+++ b/src/Arte/PCMS/AdminBundle/Resources/views/TBSystemUser/show.html.twig
@@ -20,7 +20,7 @@
                 </tr>
                 <tr>
                     <th scope="row">ログインID</th>
-                        <td>{{ entity.LoginId }}</td>
+                        <td>{{ entity.Username }}</td>
                 </tr>
                 <tr>
                     <th scope="row">ユーザー名</th>
