--- a/src/Arte/PCMS/PublicBundle/Resources/views/TBProjectMaster/layout.html.twig
+++ b/src/Arte/PCMS/PublicBundle/Resources/views/TBProjectMaster/layout.html.twig
@@ -24,7 +24,7 @@
         </div>
         <div class="headerContentsArea">
             <ul class="headerButtonList clearfix">
-                <li><a href="#" title="ユーザー情報"><span class="company_name">{{ app.user.TBDepartmentDepartmentId.Name }}</span>{{ app.user.DisplayName }}</a></li>
+                <li><a href="#" title="ユーザー情報"><span class="company_name">(株)ABC</span> ABC 太郎</a></li>
                 <li class="home" title="HOME"><a href="index.html"></a></li>
                 <li class="logout" title="ログアウト"><a href="#"></a></li>
             </ul>
