--- a/src/Arte/PCMS/PublicBundle/Resources/views/TBProjectMaster/index.html.twig
+++ b/src/Arte/PCMS/PublicBundle/Resources/views/TBProjectMaster/index.html.twig
@@ -1,9 +1,9 @@
-{% extends 'ArtePCMSAdminBundle:TBSystemUser:layout.html.twig' %}
+{% extends 'ArtePCMSPublicBundle:TBProjectMaster:layout.html.twig' %}
 
 {% block body -%}
-<form action="{{ path('systemuser') }}" novalidate method="post" {{ form_enctype(form) }} name="systemuser_list">
+<form action="{{ path('project') }}" novalidate method="post" {{ form_enctype(form) }} name="project_list">
     <header>
-        <h1>TBSystemUser list type2</h1>
+        <h1>案件一覧</h1>
     </header>
     <section class="section">
         <h1 class="caption">検索</h1>
@@ -20,51 +20,71 @@
             <table cellspacing="0">
                 <tbody>
                     <tr>
-                        <th>{{ form_label(form.search.Username) }}</th>
+                        <th>{{ form_label(form.search.Name) }}</th>
                         <td>
                             <div class="error_validation_inline">
-                                {{ form_errors(form.search.Username) }}
+                                {{ form_errors(form.search.Name) }}
                             </div>
-                            {{ form_widget(form.search.Username) }}
-                        </td>
-                        <th>{{ form_label(form.search.MailAddress) }}</th>
-                        <td>
-                            <div class="error_validation_inline">
-                                {{ form_errors(form.search.MailAddress) }}
-                            </div>
-                            {{ form_widget(form.search.MailAddress) }}
-                        </td>
-                        <th>{{ form_label(form.search.TBDepartmentDepartmentId) }}</th>
-                        <td>
-                            <div class="error_validation_inline">
-                                {{ form_errors(form.search.TBDepartmentDepartmentId) }}
-                            </div>
-                            {{ form_widget(form.search.TBDepartmentDepartmentId) }}
+                            {{ form_widget(form.search.Name) }}
                         </td>
                     </tr>
                     <tr>
-                        <th>{{ form_label(form.search.DisplayName) }}</th>
+                        <th>{{ form_label(form.search.Status) }}</th>
                         <td>
                             <div class="error_validation_inline">
-                                {{ form_errors(form.search.DisplayName) }}
+                                {{ form_errors(form.search.Status) }}
                             </div>
-                            {{ form_widget(form.search.DisplayName) }}
-                        </td>
-                        <th>{{ form_label(form.search.Active) }}</th>
-                        <td>
-                            <div class="error_validation_inline">
-                                {{ form_errors(form.search.Active) }}
-                            </div>
-                            {{ form_widget(form.search.Active) }}
+                            {{ form_widget(form.search.Status) }}
                         </td>
                     </tr>
 
+
+
+                    <tr>
+                        <th>{{ form_label(form.search.PeriodStart) }}</th>
+                        <td>
+                            <div class="error_validation_inline">
+                                {{ form_errors(form.search.PeriodStart) }}
+                            </div>
+                            {{ form_widget(form.search.PeriodStart) }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>{{ form_label(form.search.PeriodEnd) }}</th>
+                        <td>
+                            <div class="error_validation_inline">
+                                {{ form_errors(form.search.PeriodEnd) }}
+                            </div>
+                            {{ form_widget(form.search.PeriodEnd) }}
+                        </td>
+                    </tr>
+
+
+
+                    <tr>
+                        <th>{{ form_label(form.search.TBCustomerCustomerId) }}</th>
+                        <td>
+                            <div class="error_validation_inline">
+                                {{ form_errors(form.search.TBCustomerCustomerId) }}
+                            </div>
+                            {{ form_widget(form.search.TBCustomerCustomerId) }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>{{ form_label(form.search.TBSystemUserManagerId) }}</th>
+                        <td>
+                            <div class="error_validation_inline">
+                                {{ form_errors(form.search.TBSystemUserManagerId) }}
+                            </div>
+                            {{ form_widget(form.search.TBSystemUserManagerId) }}
+                        </td>
+                    </tr>
                 </tbody>
                 <tfoot>
                     <tr>
                         <td nowrap>
                             <input class="button_100" type="submit" value="検索">
-                            <a href="{{ path('systemuser') }}">条件リセット</a>
+                            <a href="{{ path('project') }}">条件リセット</a>
                         </td>
                     </tr>
                 </tfoot>
@@ -76,7 +96,7 @@
         <div class="functionListArea">
             <ul class="functionList clearfix">
                 <li class="home">
-                    <a href="{{ path('systemuser_new', {ret: returnUrlParam}) }}">
+                    <a href="{{ path('project_new', {ret: returnUrlParam}) }}">
                         新規作成
                     </a>
                 </li>
@@ -119,21 +139,23 @@
             <tbody class="evenRows">
             {% for entity in entities %}
                 <tr>
-                    <td><a href="{{ path('systemuser_show', { 'id': entity.id, ret: returnUrlParam }) }}">{{ entity.Username }}</a></td>
-                    <td>{{ entity.Active  ? "有効" : "無効" }}</td>
-                    <td>{{ entity.DisplayName }}</td>
-                    <td>{{ entity.MailAddress }}</td>
-                    <td>{{ entity.TBDepartmentDepartmentId is null ? "" : entity.TBDepartmentDepartmentId.Name }}</td>
-                    <td>{% if entity.LastLoginDatetime %}{{ entity.LastLoginDatetime|date('Y-m-d H:i:s') }}{% endif %}</td>
+                    <td><a href="{{ path('project_show', { 'id': entity.id, ret: returnUrlParam }) }}">{{ entity.Name }}</a></td>
+                    <td>{{ entity.TBCustomerCustomerId is null ? "" : entity.TBCustomerCustomerId.Name }}</td>
+                    <td>{% if entity.PeriodStart %}{{ entity.PeriodStart|date('Y-m-d') }}{% endif %}</td>
+                    <td>{% if entity.PeriodEnd %}{{ entity.PeriodEnd|date('Y-m-d') }}{% endif %}</td>
+                    <td>{{ entity.TBSystemUserManagerId is null ? "" : entity.TBSystemUserManagerId.Name }}</td>
+                    <td>{{ entity.Status }}</td>
+                    <td>a</td>
+                    <td>b</td>
 
                     <td class="function_icon_cell">
-                        <a href="{{ path('systemuser_show', { 'id': entity.id, ret: returnUrlParam }) }}"><img src="{{ asset('bundles/pingdecopongpdpgenerator/img/table.png') }}" width="16" height="16"></a>
+                        <a href="{{ path('project_show', { 'id': entity.id, ret: returnUrlParam }) }}"><img src="{{ asset('bundles/pingdecopongpdpgenerator/img/table.png') }}" width="16" height="16"></a>
                     </td>
                     <td class="function_icon_cell">
-                        <a href="{{ path('systemuser_edit', { 'id': entity.id, ret: returnUrlParam }) }}"><img src="{{ asset('bundles/pingdecopongpdpgenerator/img/ico_pencil.png') }}" width="16" height="16"></a>
+                        <a href="{{ path('project_edit', { 'id': entity.id, ret: returnUrlParam }) }}"><img src="{{ asset('bundles/pingdecopongpdpgenerator/img/ico_pencil.png') }}" width="16" height="16"></a>
                     </td>
                     <td class="function_icon_cell">
-                        <a href="{{ path('systemuser_delete', { 'id': entity.id, ret: returnUrlParam }) }}"><img src="{{ asset('bundles/pingdecopongpdpgenerator/img/asico_del_bl.png') }}" width="16" height="16" alt="削除"></a>
+                        <a href="{{ path('project_delete', { 'id': entity.id, ret: returnUrlParam }) }}"><img src="{{ asset('bundles/pingdecopongpdpgenerator/img/asico_del_bl.png') }}" width="16" height="16" alt="削除"></a>
                     </td>
                 </tr>
             {% endfor %}
