--- a/src/Arte/PCMS/PublicBundle/Resources/views/TBProjectMaster/edit.html.twig
+++ b/src/Arte/PCMS/PublicBundle/Resources/views/TBProjectMaster/edit.html.twig
@@ -3,161 +3,193 @@
 
 {% block body -%}
     <header>
-        <h1>TBProjectMaster 編集</h1>
+        <h1>案件編集</h1>
     </header>
     <section class="section">
-        <h1 class="caption"><span id="selectFolderName">TBProjectMaster 編集</span></h1>
-        <div class="functionListArea">
+        <h1 class="caption"><span id="selectFolderName">案件編集</span></h1>
+
+        {% if mode == 'input' %}
+        <div class="functionListArea" style="margin: 10px 0;">
             <ul class="functionList clearfix">
                 <li class="home"><a href="{{ path('project') }}?{{ returnUrlParam|raw }}">一覧へもどる</a></li>
             </ul>
         </div>
-        <form action="{{ path('project_edit', { 'id': entity.id }) }}" method="post" {{ form_enctype(form) }} name="project_edit_form">
+        {% endif %}
+
+        <form action="{{ path('project_edit', { 'id': ID }) }}" method="post" {{ form_enctype(form) }} name="project_edit_form">
 
             <div class="error_validation">
                 {{ form_errors(form) }}
             </div>
 
             <table width="600" border="0" cellpadding="0" cellspacing="0" class="detailTable">
-                    <tr>
-                        <th scope="row">{{ form_label(form.TBProjectMaster.Name) }}</th>
-                        <td>
-                            <div class="error_validation_inline">
-                                {{ form_errors(form.TBProjectMaster.Name) }}
-                            </div>
-                            {{ form_widget(form.TBProjectMaster.Name) }}
-                            <br/>
-                            <span class="input_notes">{{ form.TBProjectMaster.Name.vars.name }}</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row">{{ form_label(form.TBProjectMaster.Status) }}</th>
-                        <td>
-                            <div class="error_validation_inline">
-                                {{ form_errors(form.TBProjectMaster.Status) }}
-                            </div>
-                            {{ form_widget(form.TBProjectMaster.Status) }}
-                            <br/>
-                            <span class="input_notes">{{ form.TBProjectMaster.Status.vars.name }}</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row">{{ form_label(form.TBProjectMaster.Explanation) }}</th>
-                        <td>
-                            <div class="error_validation_inline">
-                                {{ form_errors(form.TBProjectMaster.Explanation) }}
-                            </div>
-                            {{ form_widget(form.TBProjectMaster.Explanation) }}
-                            <br/>
-                            <span class="input_notes">{{ form.TBProjectMaster.Explanation.vars.name }}</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row">{{ form_label(form.TBProjectMaster.CustomerId) }}</th>
-                        <td>
-                            <div class="error_validation_inline">
-                                {{ form_errors(form.TBProjectMaster.CustomerId) }}
-                            </div>
-                            {{ form_widget(form.TBProjectMaster.CustomerId) }}
-                            <br/>
-                            <span class="input_notes">{{ form.TBProjectMaster.CustomerId.vars.name }}</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row">{{ form_label(form.TBProjectMaster.DeleteFlag) }}</th>
-                        <td>
-                            <div class="error_validation_inline">
-                                {{ form_errors(form.TBProjectMaster.DeleteFlag) }}
-                            </div>
-                            {{ form_widget(form.TBProjectMaster.DeleteFlag) }}
-                            <br/>
-                            <span class="input_notes">{{ form.TBProjectMaster.DeleteFlag.vars.name }}</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row">{{ form_label(form.TBProjectMaster.PeriodStart) }}</th>
-                        <td>
-                            <div class="error_validation_inline">
-                                {{ form_errors(form.TBProjectMaster.PeriodStart) }}
-                            </div>
-                            {{ form_widget(form.TBProjectMaster.PeriodStart) }}
-                            <br/>
-                            <span class="input_notes">{{ form.TBProjectMaster.PeriodStart.vars.name }}</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row">{{ form_label(form.TBProjectMaster.PeriodEnd) }}</th>
-                        <td>
-                            <div class="error_validation_inline">
-                                {{ form_errors(form.TBProjectMaster.PeriodEnd) }}
-                            </div>
-                            {{ form_widget(form.TBProjectMaster.PeriodEnd) }}
-                            <br/>
-                            <span class="input_notes">{{ form.TBProjectMaster.PeriodEnd.vars.name }}</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row">{{ form_label(form.TBProjectMaster.ManagerId) }}</th>
-                        <td>
-                            <div class="error_validation_inline">
-                                {{ form_errors(form.TBProjectMaster.ManagerId) }}
-                            </div>
-                            {{ form_widget(form.TBProjectMaster.ManagerId) }}
-                            <br/>
-                            <span class="input_notes">{{ form.TBProjectMaster.ManagerId.vars.name }}</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row">{{ form_label(form.TBProjectMaster.EstimateFilePath) }}</th>
-                        <td>
-                            <div class="error_validation_inline">
-                                {{ form_errors(form.TBProjectMaster.EstimateFilePath) }}
-                            </div>
-                            {{ form_widget(form.TBProjectMaster.EstimateFilePath) }}
-                            <br/>
-                            <span class="input_notes">{{ form.TBProjectMaster.EstimateFilePath.vars.name }}</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row">{{ form_label(form.TBProjectMaster.ScheduleFilePath) }}</th>
-                        <td>
-                            <div class="error_validation_inline">
-                                {{ form_errors(form.TBProjectMaster.ScheduleFilePath) }}
-                            </div>
-                            {{ form_widget(form.TBProjectMaster.ScheduleFilePath) }}
-                            <br/>
-                            <span class="input_notes">{{ form.TBProjectMaster.ScheduleFilePath.vars.name }}</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row">{{ form_label(form.TBProjectMaster.TBCustomerCustomerId) }}</th>
-                        <td>
-                            <div class="error_validation_inline">
-                                {{ form_errors(form.TBProjectMaster.TBCustomerCustomerId) }}
-                            </div>
-                            {{ form_widget(form.TBProjectMaster.TBCustomerCustomerId) }}
-                            <br/>
-                            <span class="input_notes">{{ form.TBProjectMaster.TBCustomerCustomerId.vars.name }}</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row">{{ form_label(form.TBProjectMaster.TBSystemUserManagerId) }}</th>
-                        <td>
-                            <div class="error_validation_inline">
-                                {{ form_errors(form.TBProjectMaster.TBSystemUserManagerId) }}
-                            </div>
-                            {{ form_widget(form.TBProjectMaster.TBSystemUserManagerId) }}
-                            <br/>
-                            <span class="input_notes">{{ form.TBProjectMaster.TBSystemUserManagerId.vars.name }}</span>
-                        </td>
-                    </tr>
+                <tr>
+                    <th scope="row">{{ form_label(form.TBProjectMaster.Name) }}</th>
+                    <td>
+                        <div class="error_validation_inline">
+                            {{ form_errors(form.TBProjectMaster.Name) }}
+                        </div>
+                        {{ form_widget(form.TBProjectMaster.Name) }}
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">{{ form_label(form.TBProjectMaster.TBCustomerCustomerId) }}</th>
+                    <td>
+                        <div class="error_validation_inline">
+                            {{ form_errors(form.TBProjectMaster.TBCustomerCustomerId) }}
+                        </div>
+                        {{ form_widget(form.TBProjectMaster.TBCustomerCustomerId) }}
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">{{ form_label(form.TBProjectMaster.PeriodStart) }}</th>
+                    <td>
+                        <div class="error_validation_inline">
+                            {{ form_errors(form.TBProjectMaster.PeriodStart) }}
+                        </div>
+                        {{ form_widget(form.TBProjectMaster.PeriodStart) }}
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">{{ form_label(form.TBProjectMaster.PeriodEnd) }}</th>
+                    <td>
+                        <div class="error_validation_inline">
+                            {{ form_errors(form.TBProjectMaster.PeriodEnd) }}
+                        </div>
+                        {{ form_widget(form.TBProjectMaster.PeriodEnd) }}
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">{{ form_label(form.TBProjectMaster.TBSystemUserManagerId) }}</th>
+                    <td>
+                        <div class="error_validation_inline">
+                            {{ form_errors(form.TBProjectMaster.TBSystemUserManagerId) }}
+                        </div>
+                        {{ form_widget(form.TBProjectMaster.TBSystemUserManagerId) }}
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">{{ form_label(form.TBProjectMaster.Status) }}</th>
+                    <td>
+                        <div class="error_validation_inline">
+                            {{ form_errors(form.TBProjectMaster.Status) }}
+                        </div>
+                        {{ form_widget(form.TBProjectMaster.Status) }}
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">{{ form_label(form.TBProjectMaster.Explanation) }}</th>
+                    <td>
+                        <div class="error_validation_inline">
+                            {{ form_errors(form.TBProjectMaster.Explanation) }}
+                        </div>
+                        {{ form_widget(form.TBProjectMaster.Explanation) }}
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">{{ form_label(form.TBProjectMaster.EstimateFilePath) }}</th>
+                    <td>
+                        <div class="error_validation_inline">
+                            {{ form_errors(form.TBProjectMaster.EstimateFilePath) }}
+                        </div>
+                        {{ form_widget(form.TBProjectMaster.EstimateFilePath) }}
+                        {% if mode == 'input' %}<br/><span class="input_notes">見積ファイルがある場合は、svr2のファイルパスを記入して下さい。</span>{% endif %}
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">{{ form_label(form.TBProjectMaster.ScheduleFilePath) }}</th>
+                    <td>
+                        <div class="error_validation_inline">
+                            {{ form_errors(form.TBProjectMaster.ScheduleFilePath) }}
+                        </div>
+                        {{ form_widget(form.TBProjectMaster.ScheduleFilePath) }}
+                        {% if mode == 'input' %}<br/><span class="input_notes">スケジュールファイルがある場合は、svr2のファイルパスを記入して下さい。</span>{% endif %}
+                    </td>
+                </tr>
+
             </table>
+
+            {% if mode == 'input' %}
+                <div class="functionListArea">
+                    <ul class="functionList clearfix">
+                        <li class="home">
+                            <a href="">
+                                項目追加
+                            </a>
+                        </li>
+                        <li class="home">
+                            {{ form_widget(form.AddSubForm) }}
+                        </li>
+                    </ul>
+                </div>
+            {% else %}
+                {% do form.AddSubForm.setRendered %}
+            {% endif %}
+
+
+            <table class="gridTable" style="width:100%;">
+                <thead>
+                <tr>
+                    <th class="mainTh sort_cell">
+                        <a href="#" >項目名</a>
+                    </th>
+                    <th class="mainTh sort_cell">
+                        <a href="#" >工数</a>
+                    </th>
+
+                    <th class="mainTh sort_cell">
+                        <a href="#" >グループ</a>
+                    </th>
+                    <th class="mainTh sort_cell">
+                        <a href="#" >追加</a>
+                    </th>
+                    <th class="mainTh sort_cell">
+                        <a href="#" >上</a>
+                    </th>
+                    <th class="mainTh sort_cell">
+                        <a href="#" >下</a>
+                    </th>
+
+                    {#
+                                            <th class="mainTh function_icon_cell"></th>
+                                            <th class="mainTh function_icon_cell"></th>
+                                            <th class="mainTh function_icon_cell"></th>
+                                            <th class="mainTh function_icon_cell"></th>
+                    #}
+                    <th class="mainTh function_icon_cell"></th>
+                </tr>
+                </thead>
+                <tbody class="evenRows">
+
+                {% if form.TBProjectMaster.SubForms|length != 0 %}
+                    {{ _self.sub_forms(form.TBProjectMaster.SubForms, 0, mode) }}
+                {% else %}
+                    <tr >
+                        <td colspan="7">項目を追加して下さい。</td>
+                    </tr>
+                    {% do form.TBProjectMaster.SubForms.setRendered %}
+                {% endif %}
+
+                </tbody>
+            </table>
+
+
             <div class="submit_box">
                 {% if mode == 'input' %}
+                    {{ form_widget(form.Confirm) }}
+                    {% do form.Return.setRendered %}
+                    {% do form.Submit.setRendered %}
+                    {#
                 <input type="button" onclick="postConfirm()" value="確認" style="width:100px;"/>
+                    #}
                 {% elseif mode == 'confirm' %}
+                    {% do form.Confirm.setRendered %}
+                    {{ form_widget(form.Return) }}
+                    {{ form_widget(form.Submit) }}
+                    {#
                 <input type="button" onclick="postBack()" value="戻る"/>
                 <input type="button" onclick="postSubmit()" value="登録" style="width:100px;"/>
+                    #}
                 {% endif %}
             </div>
 
@@ -169,6 +201,84 @@
     </section>
 
 {% endblock %}
+
+{% macro sub_forms(Datas, level, mode) %}
+    {% for Data in Datas %}
+        <tr>
+            {{ form_widget(Data.id) }}
+            {{ form_widget(Data.GroupFlag) }}
+            <td style="padding-left: {{ level*20 }}px;">
+                <div class="error_validation_inline">
+                    {{ form_errors(Data.Name) }}
+                </div>
+                {{ form_widget(Data.Name) }}
+                {#
+                {{ form_widget(Data.Name, {'attr': {'style': 'margin: 0 0 0 3em;'}}) }}
+                #}
+            </td>
+            <td>
+                {% if Data.GroupFlag.vars.value %}
+                    {% do Data.Cost.setRendered %}
+                {% else %}
+                    <div class="error_validation_inline">
+                        {{ form_errors(Data.Cost) }}
+                    </div>
+                    {{ form_widget(Data.Cost) }}
+                {% endif %}
+            </td>
+
+            <td>
+                {% if mode == 'input' %}
+                    {% if Data.GroupFlag.vars.value %}
+                        {{ form_widget(Data.Group, {'label': '解除'}) }}
+                    {% else %}
+                        {{ form_widget(Data.Group) }}
+                    {% endif %}
+                {% else %}
+                    {% do Data.Group.setRendered %}
+                {% endif %}
+            </td>
+            <td>
+                {% if mode == 'input' %}
+                    {% if Data.GroupFlag.vars.value %}
+                        {{ form_widget(Data.Add) }}
+                    {% else %}
+                        {% do Data.Add.setRendered %}
+                    {% endif %}
+                {% else %}
+                    {% do Data.Add.setRendered %}
+                {% endif %}
+            </td>
+            <td>
+                {% if mode == 'input' %}
+                    {{ form_widget(Data.Up) }}
+                {% else %}
+                    {% do Data.Up.setRendered %}
+                {% endif %}
+            </td>
+            <td>
+                {% if mode == 'input' %}
+                    {{ form_widget(Data.Down) }}
+                {% else %}
+                    {% do Data.Down.setRendered %}
+                {% endif %}
+            </td>
+
+            <td class="function_icon_cell">
+                {% if mode == 'input' %}
+                    {{ form_widget(Data.Delete) }}
+                {% else %}
+                    {% do Data.Delete.setRendered %}
+                {% endif %}
+            </td>
+        </tr>
+
+        {% if Data.SubForms is defined %}
+            {{ _self.sub_forms(Data.SubForms, level+1, mode) }}
+        {% endif %}
+
+    {% endfor %}
+{% endmacro %}
 
 {% block javascripts %}
     <script type="text/javascript">
