--- a/src/Arte/PCMS/PublicBundle/Resources/views/TBProjectMaster/new.html.twig
+++ b/src/Arte/PCMS/PublicBundle/Resources/views/TBProjectMaster/new.html.twig
@@ -3,15 +3,19 @@
 
 {% block body -%}
     <header>
-        <h1>TBProjectMaster 新規作成</h1>
+        <h1>案件新規作成</h1>
     </header>
     <section class="section">
-        <h1 class="caption"><span id="selectFolderName">TBProjectMaster 新規作成</span></h1>
-        <div class="functionListArea">
+        <h1 class="caption"><span id="selectFolderName">案件新規作成</span></h1>
+
+        {% if mode == 'input' %}
+        <div class="functionListArea" style="margin: 10px 0;">
             <ul class="functionList clearfix">
                 <li class="home"><a href="{{ path('project') }}?{{ returnUrlParam|raw }}">一覧へもどる</a></li>
             </ul>
         </div>
+        {% endif %}
+
         <form action="{{ path('project_new') }}" novalidate method="post" {{ form_enctype(form) }} name="project_new_form">
 
             <div class="error_validation">
@@ -26,52 +30,15 @@
                             {{ form_errors(form.TBProjectMaster.Name) }}
                         </div>
                             {{ form_widget(form.TBProjectMaster.Name) }}
-                        <br/>
-                        <span class="input_notes">{{ form.TBProjectMaster.Name.vars.name }}</span>
                     </td>
                 </tr>
                 <tr>
-                    <th scope="row">{{ form_label(form.TBProjectMaster.Status) }}</th>
+                    <th scope="row">{{ form_label(form.TBProjectMaster.TBCustomerCustomerId) }}</th>
                     <td>
                         <div class="error_validation_inline">
-                            {{ form_errors(form.TBProjectMaster.Status) }}
+                            {{ form_errors(form.TBProjectMaster.TBCustomerCustomerId) }}
                         </div>
-                            {{ form_widget(form.TBProjectMaster.Status) }}
-                        <br/>
-                        <span class="input_notes">{{ form.TBProjectMaster.Status.vars.name }}</span>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">{{ form_label(form.TBProjectMaster.Explanation) }}</th>
-                    <td>
-                        <div class="error_validation_inline">
-                            {{ form_errors(form.TBProjectMaster.Explanation) }}
-                        </div>
-                            {{ form_widget(form.TBProjectMaster.Explanation) }}
-                        <br/>
-                        <span class="input_notes">{{ form.TBProjectMaster.Explanation.vars.name }}</span>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">{{ form_label(form.TBProjectMaster.CustomerId) }}</th>
-                    <td>
-                        <div class="error_validation_inline">
-                            {{ form_errors(form.TBProjectMaster.CustomerId) }}
-                        </div>
-                            {{ form_widget(form.TBProjectMaster.CustomerId) }}
-                        <br/>
-                        <span class="input_notes">{{ form.TBProjectMaster.CustomerId.vars.name }}</span>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">{{ form_label(form.TBProjectMaster.DeleteFlag) }}</th>
-                    <td>
-                        <div class="error_validation_inline">
-                            {{ form_errors(form.TBProjectMaster.DeleteFlag) }}
-                        </div>
-                            {{ form_widget(form.TBProjectMaster.DeleteFlag) }}
-                        <br/>
-                        <span class="input_notes">{{ form.TBProjectMaster.DeleteFlag.vars.name }}</span>
+                        {{ form_widget(form.TBProjectMaster.TBCustomerCustomerId) }}
                     </td>
                 </tr>
                 <tr>
@@ -80,9 +47,7 @@
                         <div class="error_validation_inline">
                             {{ form_errors(form.TBProjectMaster.PeriodStart) }}
                         </div>
-                            {{ form_widget(form.TBProjectMaster.PeriodStart) }}
-                        <br/>
-                        <span class="input_notes">{{ form.TBProjectMaster.PeriodStart.vars.name }}</span>
+                        {{ form_widget(form.TBProjectMaster.PeriodStart) }}
                     </td>
                 </tr>
                 <tr>
@@ -91,20 +56,34 @@
                         <div class="error_validation_inline">
                             {{ form_errors(form.TBProjectMaster.PeriodEnd) }}
                         </div>
-                            {{ form_widget(form.TBProjectMaster.PeriodEnd) }}
-                        <br/>
-                        <span class="input_notes">{{ form.TBProjectMaster.PeriodEnd.vars.name }}</span>
+                        {{ form_widget(form.TBProjectMaster.PeriodEnd) }}
                     </td>
                 </tr>
                 <tr>
-                    <th scope="row">{{ form_label(form.TBProjectMaster.ManagerId) }}</th>
+                    <th scope="row">{{ form_label(form.TBProjectMaster.TBSystemUserManagerId) }}</th>
                     <td>
                         <div class="error_validation_inline">
-                            {{ form_errors(form.TBProjectMaster.ManagerId) }}
+                            {{ form_errors(form.TBProjectMaster.TBSystemUserManagerId) }}
                         </div>
-                            {{ form_widget(form.TBProjectMaster.ManagerId) }}
-                        <br/>
-                        <span class="input_notes">{{ form.TBProjectMaster.ManagerId.vars.name }}</span>
+                        {{ form_widget(form.TBProjectMaster.TBSystemUserManagerId) }}
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">{{ form_label(form.TBProjectMaster.Status) }}</th>
+                    <td>
+                        <div class="error_validation_inline">
+                            {{ form_errors(form.TBProjectMaster.Status) }}
+                        </div>
+                        {{ form_widget(form.TBProjectMaster.Status) }}
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">{{ form_label(form.TBProjectMaster.Explanation) }}</th>
+                    <td>
+                        <div class="error_validation_inline">
+                            {{ form_errors(form.TBProjectMaster.Explanation) }}
+                        </div>
+                        {{ form_widget(form.TBProjectMaster.Explanation) }}
                     </td>
                 </tr>
                 <tr>
@@ -113,9 +92,8 @@
                         <div class="error_validation_inline">
                             {{ form_errors(form.TBProjectMaster.EstimateFilePath) }}
                         </div>
-                            {{ form_widget(form.TBProjectMaster.EstimateFilePath) }}
-                        <br/>
-                        <span class="input_notes">{{ form.TBProjectMaster.EstimateFilePath.vars.name }}</span>
+                        {{ form_widget(form.TBProjectMaster.EstimateFilePath) }}
+                        {% if mode == 'input' %}<br/><span class="input_notes">見積ファイルがある場合は、svr2のファイルパスを記入して下さい。</span>{% endif %}
                     </td>
                 </tr>
                 <tr>
@@ -124,40 +102,91 @@
                         <div class="error_validation_inline">
                             {{ form_errors(form.TBProjectMaster.ScheduleFilePath) }}
                         </div>
-                            {{ form_widget(form.TBProjectMaster.ScheduleFilePath) }}
-                        <br/>
-                        <span class="input_notes">{{ form.TBProjectMaster.ScheduleFilePath.vars.name }}</span>
+                        {{ form_widget(form.TBProjectMaster.ScheduleFilePath) }}
+                        {% if mode == 'input' %}<br/><span class="input_notes">スケジュールファイルがある場合は、svr2のファイルパスを記入して下さい。</span>{% endif %}
                     </td>
                 </tr>
+
+            </table>
+
+            {% if mode == 'input' %}
+            <div class="functionListArea">
+                <ul class="functionList clearfix">
+                    <li class="home">
+                        <a href="">
+                            項目追加
+                        </a>
+                    </li>
+                    <li class="home">
+                        {{ form_widget(form.AddSubForm) }}
+                    </li>
+                </ul>
+            </div>
+            {% else %}
+                {% do form.AddSubForm.setRendered %}
+            {% endif %}
+
+            <table class="gridTable" style="width:100%;">
+                <thead>
                     <tr>
-                        <th scope="row">{{ form_label(form.TBProjectMaster.TBCustomerCustomerId) }}</th>
-                        <td>
-                            <div class="error_validation_inline">
-                                {{ form_errors(form.TBProjectMaster.TBCustomerCustomerId) }}
-                            </div>
-                            {{ form_widget(form.TBProjectMaster.TBCustomerCustomerId) }}
-                            <br/>
-                            <span class="input_notes">{{ form.TBProjectMaster.TBCustomerCustomerId.vars.name }}</span>
-                        </td>
+                        <th class="mainTh sort_cell">
+                            <a href="#" >項目名</a>
+                        </th>
+                        <th class="mainTh sort_cell">
+                            <a href="#" >工数</a>
+                        </th>
+
+                        <th class="mainTh sort_cell">
+                            <a href="#" >グループ</a>
+                        </th>
+                        <th class="mainTh sort_cell">
+                            <a href="#" >追加</a>
+                        </th>
+                        <th class="mainTh sort_cell">
+                            <a href="#" >上</a>
+                        </th>
+                        <th class="mainTh sort_cell">
+                            <a href="#" >下</a>
+                        </th>
+
+{#
+                        <th class="mainTh function_icon_cell"></th>
+                        <th class="mainTh function_icon_cell"></th>
+                        <th class="mainTh function_icon_cell"></th>
+                        <th class="mainTh function_icon_cell"></th>
+#}
+                        <th class="mainTh function_icon_cell"></th>
                     </tr>
-                    <tr>
-                        <th scope="row">{{ form_label(form.TBProjectMaster.TBSystemUserManagerId) }}</th>
-                        <td>
-                            <div class="error_validation_inline">
-                                {{ form_errors(form.TBProjectMaster.TBSystemUserManagerId) }}
-                            </div>
-                            {{ form_widget(form.TBProjectMaster.TBSystemUserManagerId) }}
-                            <br/>
-                            <span class="input_notes">{{ form.TBProjectMaster.TBSystemUserManagerId.vars.name }}</span>
-                        </td>
+                </thead>
+                <tbody class="evenRows">
+
+                {% if form.TBProjectMaster.SubForms|length != 0 %}
+                    {{ _self.sub_forms(form.TBProjectMaster.SubForms, 0, mode) }}
+                {% else %}
+                    <tr >
+                        <td colspan="7">項目を追加して下さい。</td>
                     </tr>
+                    {% do form.TBProjectMaster.SubForms.setRendered %}
+                {% endif %}
+
+                </tbody>
             </table>
             <div class="submit_box">
                 {% if mode == 'input' %}
+                    {{ form_widget(form.Confirm) }}
+                    {% do form.Return.setRendered %}
+                    {% do form.Submit.setRendered %}
+                    {#
                 <input type="button" onclick="postConfirm()" value="確認" style="width:100px;"/>
+                    #}
                 {% elseif mode == 'confirm' %}
+                    {% do form.Confirm.setRendered %}
+                    {{ form_widget(form.Return) }}
+                    {{ form_widget(form.Submit) }}
+                    {#
                 <input type="button" onclick="postBack()" value="戻る"/>
                 <input type="button" onclick="postSubmit()" value="登録" style="width:100px;"/>
+                    #}
                 {% endif %}
             </div>
 
@@ -170,7 +199,130 @@
 
 {% endblock %}
 
+{% macro sub_forms(Datas, level, mode) %}
+    {% for Data in Datas %}
+        <tr>
+            {{ form_widget(Data.id) }}
+            {{ form_widget(Data.GroupFlag) }}
+            <td style="padding-left: {{ level*20 }}px;">
+                <div class="error_validation_inline">
+                    {{ form_errors(Data.Name) }}
+                </div>
+                {{ form_widget(Data.Name) }}
+                {#
+                {{ form_widget(Data.Name, {'attr': {'style': 'margin: 0 0 0 3em;'}}) }}
+                #}
+            </td>
+            <td>
+                {% if Data.GroupFlag.vars.value %}
+                    {% do Data.Cost.setRendered %}
+                {% else %}
+                    <div class="error_validation_inline">
+                        {{ form_errors(Data.Cost) }}
+                    </div>
+                    {{ form_widget(Data.Cost) }}
+                {% endif %}
+            </td>
+
+            <td>
+                {% if mode == 'input' %}
+                    {% if Data.GroupFlag.vars.value %}
+                        {{ form_widget(Data.Group, {'label': '解除'}) }}
+                    {% else %}
+                        {{ form_widget(Data.Group) }}
+                    {% endif %}
+                {% else %}
+                    {% do Data.Group.setRendered %}
+                {% endif %}
+            </td>
+            <td>
+                {% if mode == 'input' %}
+                    {% if Data.GroupFlag.vars.value %}
+                        {{ form_widget(Data.Add) }}
+                    {% else %}
+                        {% do Data.Add.setRendered %}
+                    {% endif %}
+                {% else %}
+                    {% do Data.Add.setRendered %}
+                {% endif %}
+            </td>
+            <td>
+                {% if mode == 'input' %}
+                    {{ form_widget(Data.Up) }}
+                {% else %}
+                    {% do Data.Up.setRendered %}
+                {% endif %}
+            </td>
+            <td>
+                {% if mode == 'input' %}
+                    {{ form_widget(Data.Down) }}
+                {% else %}
+                    {% do Data.Down.setRendered %}
+                {% endif %}
+            </td>
+
+            <td class="function_icon_cell">
+                {% if mode == 'input' %}
+                    {{ form_widget(Data.Delete) }}
+                {% else %}
+                    {% do Data.Delete.setRendered %}
+                {% endif %}
+            </td>
+        </tr>
+
+        {% if Data.SubForms is defined %}
+            {{ _self.sub_forms(Data.SubForms, level+1, mode) }}
+        {% endif %}
+
+    {% endfor %}
+{% endmacro %}
+
+{% block abc %}
+
+    {% for Data in Datas %}
+        <tr>
+            <td>
+                <div class="error_validation_inline">
+                    {{ form_errors(Data.Name) }}
+                </div>
+                {{ form_widget(Data.Name) }}
+            </td>
+            <td>
+                <div class="error_validation_inline">
+                    {{ form_errors(Data.Cost) }}
+                </div>
+                {{ form_widget(Data.Cost) }}
+            </td>
+
+            <td>
+                {{ form_widget(Data.Group) }}
+            </td>
+            <td>
+                {{ form_widget(Data.Add) }}
+            </td>
+            <td>
+                {{ form_widget(Data.Up) }}
+            </td>
+            <td>
+                {{ form_widget(Data.Down) }}
+            </td>
+
+            <td class="function_icon_cell">
+                {{ form_widget(Data.Delete) }}
+            </td>
+        </tr>
+
+        {% set aaa = Data.Branches %}
+        {{ block('abc') }}
+
+    {% endfor %}
+
+{% endblock %}
+
 {% block javascripts %}
+    <script src="{{ asset('bundles/pingdecopongpdpgenerator/js/jquery/jquery-ui-1.10.3.custom.min.js') }}" ></script>
+    <script src="{{ asset('bundles/pingdecopongpdpgenerator/js/jquery/jquery.ui.datepicker-ja.js') }}" ></script>
+    <link href="{{ asset('bundles/pingdecopongpdpgenerator/css/jqueryui/jquery-ui-1.10.3.custom.min.css') }}" rel="stylesheet" type="text/css">
     <script type="text/javascript">
         //<![CDATA[
         function postConfirm(){
@@ -185,6 +337,30 @@
             document.project_new_form["{{ form.subform.buttonAction.vars.full_name }}"].value = "";
             document.project_new_form.submit();
         }
+
+        {% if mode == 'input' %}
+        $(function() {
+            $( "#{{ form.TBProjectMaster.PeriodStart.vars.id }}" ).datepicker({
+                showOn: "button",
+                buttonImage: "{{ asset('bundles/pingdecopongpdpgenerator/img/calendar.png') }}",
+                buttonImageOnly: true,
+                dateFormat: 'yy/mm/dd',
+                beforeShow : function() {
+                    $('#ui-datepicker-div').css( 'font-size', '70%' );
+                }
+            });
+
+            $( "#{{ form.TBProjectMaster.PeriodEnd.vars.id }}" ).datepicker({
+                showOn: "button",
+                buttonImage: "{{ asset('bundles/pingdecopongpdpgenerator/img/calendar.png') }}",
+                buttonImageOnly: true,
+                dateFormat: 'yy/mm/dd',
+                beforeShow : function() {
+                    $('#ui-datepicker-div').css( 'font-size', '70%' );
+                }
+            });
+        });
+        {% endif %}
         //]]>
     </script>
 {% endblock %}
