--- a/src/Arte/PCMS/AdminBundle/Resources/views/TBSystemUser/edit.html.twig
+++ b/src/Arte/PCMS/AdminBundle/Resources/views/TBSystemUser/edit.html.twig
@@ -1,4 +1,5 @@
-{% extends 'ArtePCMSAdminBundle:TBSystemUser:layout.html.twig' %}
+{% extends 'ArtePCMSAdminBundle::layout.html.twig' %}
+
 {% form_theme form 'pingdecopongFormFreezeBundle:Form:form_layout.html.twig' %}
 
 {% block body -%}
