--- a/src/Arte/PCMS/AdminBundle/Resources/views/TBSystemUser/delete.html.twig
+++ b/src/Arte/PCMS/AdminBundle/Resources/views/TBSystemUser/delete.html.twig
@@ -1,25 +1,23 @@
-{% extends 'ArtePCMSAdminBundle:TBSystemUser:layout.html.twig' %}
+{% extends 'ArtePCMSAdminBundle::layout.html.twig' %}
+
 
 {% block body -%}
     <header>
-        <h1>TBSystemUser削除</h1>
+        <h1>ユーザー 削除</h1>
     </header>
 
     <section class="section">
-        <h1 class="caption"><span id="selectFolderName">TBSystemUser詳細</span></h1>
+        <h1 class="caption"><span id="selectFolderName">ユーザー 削除</span></h1>
         <div class="functionListArea">
             <ul class="functionList clearfix">
                 <li class="home"><a href="{{ path('systemuser') }}?{{ returnUrlParam|raw }}">一覧へもどる</a></li>
             </ul>
         </div>
         <table width="600" border="0" cellpadding="0" cellspacing="0" class="detailTable">
-            <tr>
-                <th scope="row">Id</th>
-                <td>{{ entity.id }}</td>
-            </tr>
+
             <tr>
                 <th scope="row">ログインID</th>
-                <td>{{ entity.LoginId }}</td>
+                <td>{{ entity.Username }}</td>
             </tr>
             <tr>
                 <th scope="row">ユーザー名</th>
@@ -54,13 +52,13 @@
                 <td>{% if entity.LastLoginDatetime %}{{ entity.LastLoginDatetime|date('Y-m-d H:i:s') }}{% endif %}</td>
             </tr>
         </table>
-        <form action="{{ path('systemuser_delete', { 'id': entity.id }) }}" novalidate method="post" {{ form_enctype(form) }} name="systemuser_delete_form">
 
-            <div class="submit_box">
-                <input type="submit" value="削除" style="width:100px;"/>
-            </div>
+        {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+        <div class="submit_box">
+            {{ form_widget(form.Submit) }}
+        </div>
+        {{ form_end(form) }}
 
-            {{ form_end(form) }}
     </section>
 
 {% endblock %}
